(follow-up r91518; bug 29658 et al.) Improving RTL support for several extensions: AbuseFilter: aligning rules edit box as LTR, since they are essentially English CodeReview: aligning commit messages according to content language direction; and aligning input boxes on SpecialRepoAdmin as LTR FlaggedRevs: aligning box shown on articles to content language dir; and adding direction marks to ReviewedPages & UnreviewedPages LiquidThreads: * add direction mark * make headings follow the content language dir * remove lqt_post_ltr/rtl (added a few commits ago) to use mw-content-ltr/rtl in core UploadWizard: make calendar input follow user direction (not content direction, as since r91518) (see bug 28902)

--- a/resources/uploadWizard.css
+++ b/resources/uploadWizard.css
@@ -658,6 +658,9 @@ input[type='text'].mwe-validator-error, textarea.mwe-validator-error {
 	/* @embed */
 	background: #ffffff url('images/calendar.gif') no-repeat right center;
 }
+input.mwe-date {
+	direction: ltr;
+}
 
 .ui-datepicker-current-day a.ui-state-active {
 	background: #ffff99;
